force-app/main/default/objects/Targeted_Country__c/Targeted_Country__c.object-meta.xml
<CustomObject>
    <description>This Object is a Junction Object between Account and Country.</description>
    <label>Targeted Country</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Targeted Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targeted Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>