force-app/main/default/objects/Targeted_Country__c/fields/Account_Country_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Useful to limit one Record by Merchant ID / Country API Name combination.</description>
    <externalId>true</externalId>
    <label>Account Country Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>