force-app/main/default/objects/Targeted_Country__c/fields/Already_Selling_in_Country__c.field-meta.xml
<CustomField>
    <fullName>Already_Selling_in_Country__c</fullName>
    <inlineHelpText>On other marketplaces.</inlineHelpText>
    <label>Already Selling in Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>