force-app/main/default/objects/Targeted_Country__c/fields/Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Back_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Care</label>
    <type>Checkbox</type>
</CustomField>