force-app/main/default/objects/Targeted_Country__c/fields/Back_Ship__c.field-meta.xml
<CustomField>
    <fullName>Back_Ship__c</fullName>
    <label>Back Ship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>