force-app/main/default/objects/Targeted_Country__c/fields/Buyback_BO_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyback_BO_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyback BO Status</label>
    <type>Checkbox</type>
</CustomField>