force-app/main/default/objects/Targeted_Country__c/fields/Buyback_Live_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Live_Status__c</fullName>
    <label>Buyback Live Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>