force-app/main/default/objects/Targeted_Country__c/fields/CC_List__c.field-meta.xml
<CustomField>
    <fullName>CC_List__c</fullName>
    <formula>If ( Customer_Champion__c = $User.Id, &quot;Yes&quot;, &quot;No&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC_List</label>
    <type>Text</type>
</CustomField>