force-app/main/default/objects/Targeted_Country__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Availables_countries_to_sell_into</valueSetName>
    </valueSet>
</CustomField>