force-app/main/default/objects/Targeted_Country__c/fields/Country_of_origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_origin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check by Process Builder if Country = Merchant Billing Country</description>
    <label>Country of origin</label>
    <type>Checkbox</type>
</CustomField>