force-app/main/default/objects/Targeted_Country__c/fields/Country_Tax_Number_VAT__c.field-meta.xml
<CustomField>
    <fullName>Country_Tax_Number_VAT__c</fullName>
    <label>Country Tax Number (VAT)</label>
    <length>70</length>
    <type>Text</type>
</CustomField>