force-app/main/default/objects/Targeted_Country__c/fields/Cross_Border_negotiation_status__c.field-meta.xml
<CustomField>
    <fullName>Cross_Border_negotiation_status__c</fullName>
    <description>Use this field to store the status of your negotiation to open this Targeted Country.</description>
    <inlineHelpText>Use this field to store the status of your negotiation to open this Targeted Country.</inlineHelpText>
    <label>Cross Border negotiation status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Not contacted</fullName>
            </value>
            <value>
                <fullName>2. Negotiation ongoing</fullName>
            </value>
            <value>
                <fullName>3. Negotiation successful</fullName>
            </value>
            <value>
                <fullName>4. Negotiation paused</fullName>
            </value>
            <value>
                <fullName>5.a. Refused: Logistic costs</fullName>
            </value>
            <value>
                <fullName>5.b. Refused: Additional returns management</fullName>
            </value>
            <value>
                <fullName>5.c. Refused: Financial reasons</fullName>
            </value>
            <value>
                <fullName>5.d. Refused: VAT</fullName>
            </value>
            <value>
                <fullName>5.e. Refused: New payment method</fullName>
            </value>
            <value>
                <fullName>5.f. Refused: Currency</fullName>
            </value>
            <value>
                <fullName>5.g. Refused: BackCare too expensive</fullName>
            </value>
            <value>
                <fullName>5.h. Refused: BackShip too expensive</fullName>
            </value>
            <value>
                <fullName>5.i. Refused: Not interested</fullName>
            </value>
            <value>
                <fullName>5.j. Refused: Other reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>