force-app/main/default/objects/Targeted_Country__c/fields/CurrentCC__c.field-meta.xml
<CustomField>
    <fullName>CurrentCC__c</fullName>
    <formula>IF( (Customer_Champion__c = $User.Id) , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentCC</label>
    <type>Text</type>
</CustomField>