force-app/main/default/objects/Targeted_Country__c/fields/Customer_Champion__c.field-meta.xml
<CustomField>
    <fullName>Customer_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person in charge of the specified Merchant and Country.</description>
    <label>Customer Champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targeted_Countries</relationshipName>
    <type>Lookup</type>
</CustomField>