force-app/main/default/objects/Targeted_Country__c/fields/Date_end_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Date_end_Back_Care__c</fullName>
    <label>Date end Back Care</label>
    <type>Date</type>
</CustomField>