force-app/main/default/objects/Targeted_Country__c/fields/Date_entry_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Date_entry_Back_Care__c</fullName>
    <label>Date entry Back Care</label>
    <type>Date</type>
</CustomField>