force-app/main/default/objects/Targeted_Country__c/fields/Date_Entry_in_stage_Selected__c.field-meta.xml
<CustomField>
    <fullName>Date_Entry_in_stage_Selected__c</fullName>
    <label>Date Entry in stage Selected</label>
    <type>DateTime</type>
</CustomField>