force-app/main/default/objects/Targeted_Country__c/fields/Date_negotiation_paused__c.field-meta.xml
<CustomField>
    <fullName>Date_negotiation_paused__c</fullName>
    <label>Date negotiation paused</label>
    <type>DateTime</type>
</CustomField>