force-app/main/default/objects/Targeted_Country__c/fields/Date_negotiation_start__c.field-meta.xml
<CustomField>
    <fullName>Date_negotiation_start__c</fullName>
    <label>Date negotiation start</label>
    <type>DateTime</type>
</CustomField>