force-app/main/default/objects/Targeted_Country__c/fields/Date_negotiation_succeed__c.field-meta.xml
<CustomField>
    <fullName>Date_negotiation_succeed__c</fullName>
    <label>Date negotiation succeed</label>
    <type>DateTime</type>
</CustomField>