force-app/main/default/objects/Targeted_Country__c/fields/Date_rejection__c.field-meta.xml
<CustomField>
    <fullName>Date_rejection__c</fullName>
    <label>Date rejection</label>
    <type>DateTime</type>
</CustomField>