force-app/main/default/objects/Targeted_Country__c/fields/EPR_DE_Supplier_s_Packaging__c.field-meta.xml
<CustomField>
    <fullName>EPR_DE_Supplier_s_Packaging__c</fullName>
    <label>EPR DE: Supplier’s Packaging</label>
    <length>200</length>
    <type>Text</type>
</CustomField>