force-app/main/default/objects/Targeted_Country__c/fields/EPR_FR_Compliant__c.field-meta.xml
<CustomField>
    <fullName>EPR_FR_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPR FR Compliant</label>
    <type>Checkbox</type>
</CustomField>