force-app/main/default/objects/Targeted_Country__c/fields/EPR_FR_exempt_from_DEEE__c.field-meta.xml
<CustomField>
    <fullName>EPR_FR_exempt_from_DEEE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPR FR: exempt from DEEE</label>
    <type>Checkbox</type>
</CustomField>