force-app/main/default/objects/Targeted_Country__c/fields/EPR_FR_Paper__c.field-meta.xml
<CustomField>
    <fullName>EPR_FR_Paper__c</fullName>
    <label>EPR FR: Paper</label>
    <length>200</length>
    <type>Text</type>
</CustomField>