force-app/main/default/objects/Targeted_Country__c/fields/First_order_on__c.field-meta.xml
<CustomField>
    <fullName>First_order_on__c</fullName>
    <label>First order on</label>
    <type>Date</type>
</CustomField>