force-app/main/default/objects/Targeted_Country__c/fields/Force__c.field-meta.xml
<CustomField>
    <fullName>Force__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force</label>
    <type>Checkbox</type>
</CustomField>