force-app/main/default/objects/Targeted_Country__c/fields/Has_entered_in_NMO_Xborder__c.field-meta.xml
<CustomField>
    <fullName>Has_entered_in_NMO_Xborder__c</fullName>
    <label>Has entered in NMO Xborder</label>
    <type>Date</type>
</CustomField>