force-app/main/default/objects/Targeted_Country__c/fields/Has_Entity_in_this_Country__c.field-meta.xml
<CustomField>
    <fullName>Has_Entity_in_this_Country__c</fullName>
    <label>Has Entity in this Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>