force-app/main/default/objects/Targeted_Country__c/fields/Has_Merchant_KYC_checked__c.field-meta.xml
<CustomField>
    <fullName>Has_Merchant_KYC_checked__c</fullName>
    <description>Checks if Merchant&apos;s KYC are checked</description>
    <formula>AND ( 
      Merchant__r.IBAN_uploaded__c,
      Merchant__r.ID_uploaded__c,
      Merchant__r.KBIS_uploaded__c,
      Merchant__r.Status_uploaded__c
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has_Merchant_KYC_checked</label>
    <type>Checkbox</type>
</CustomField>