force-app/main/default/objects/Targeted_Country__c/fields/KYBs_Adyen__c.field-meta.xml
<CustomField>
    <fullName>KYBs_Adyen__c</fullName>
    <inlineHelpText>Field used for UK TC only
Can be accepted or rejected by Financial Team only.</inlineHelpText>
    <label>KYBs Adyen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>TC pushed offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>