force-app/main/default/objects/Targeted_Country__c/fields/Label_return__c.field-meta.xml
<CustomField>
    <fullName>Label_return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Label return</label>
    <type>Checkbox</type>
</CustomField>