force-app/main/default/objects/Targeted_Country__c/fields/Language_proficiency_test__c.field-meta.xml
<CustomField>
    <fullName>Language_proficiency_test__c</fullName>
    <label>Language proficiency test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Survey_Status</valueSetName>
    </valueSet>
</CustomField>