force-app/main/default/objects/Targeted_Country__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Available_languages_to_speak_in</valueSetName>
    </valueSet>
</CustomField>