force-app/main/default/objects/Targeted_Country__c/fields/Live_on__c.field-meta.xml
<CustomField>
    <fullName>Live_on__c</fullName>
    <description>Date on which this Targeted Country has gone live.</description>
    <label>Live on</label>
    <type>Date</type>
</CustomField>