force-app/main/default/objects/Targeted_Country__c/fields/Logistics__c.field-meta.xml
<CustomField>
    <fullName>Logistics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logistics</label>
    <type>Checkbox</type>
</CustomField>