force-app/main/default/objects/Targeted_Country__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Targeted Countries</relationshipLabel>
    <relationshipName>Targeted_Countries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>