force-app/main/default/objects/Targeted_Country__c/fields/Merchant_Country_Names__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Country_Names__c</fullName>
    <formula>Merchant__r.Name &amp; &quot; - &quot; &amp;  TEXT ( Country__c )</formula>
    <label>Merchant &amp; Country Names</label>
    <type>Text</type>
</CustomField>