force-app/main/default/objects/Targeted_Country__c/fields/Native_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Native_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native Speaker</label>
    <type>Checkbox</type>
</CustomField>