force-app/main/default/objects/Targeted_Country__c/fields/NextOnlineStatus__c.field-meta.xml
<CustomField>
    <fullName>NextOnlineStatus__c</fullName>
    <label>NextOnlineStatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Online_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Targeted_Country_Online_Stage</valueSetName>
    </valueSet>
</CustomField>