force-app/main/default/objects/Targeted_Country__c/fields/NextPaypalScoreStage__c.field-meta.xml
<CustomField>
    <fullName>NextPaypalScoreStage__c</fullName>
    <label>NextPaypalScoreStage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Paypal_Score_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Paypal_Score_Stages</valueSetName>
    </valueSet>
</CustomField>