force-app/main/default/objects/Targeted_Country__c/fields/NMO_Process__c.field-meta.xml
<CustomField>
    <fullName>NMO_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N.M.O. Process</label>
    <referenceTo>NMO_Process__c</referenceTo>
    <relationshipLabel>Targeted Countries</relationshipLabel>
    <relationshipName>Targeted_Countries</relationshipName>
    <type>Lookup</type>
</CustomField>