force-app/main/default/objects/Targeted_Country__c/fields/Offline_in_Buyback_on__c.field-meta.xml
<CustomField>
    <fullName>Offline_in_Buyback_on__c</fullName>
    <label>Offline in Buyback on</label>
    <type>Date</type>
</CustomField>