force-app/main/default/objects/Targeted_Country__c/fields/Online_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeted_Country_Online_Stage</valueSetName>
    </valueSet>
</CustomField>