force-app/main/default/objects/Targeted_Country__c/fields/Paypal_Score_Stage__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Score_Stage__c</fullName>
    <label>Paypal Score Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paypal_Score_Stages</valueSetName>
    </valueSet>
</CustomField>