force-app/main/default/objects/Targeted_Country__c/fields/Planned_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Go_Live_Date__c</fullName>
    <label>Planned Go Live Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Go Live Date (DO)</fullName>
            </value>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
            <value>
                <fullName>Not determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>