force-app/main/default/objects/Targeted_Country__c/fields/Reason_for_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Back_Care__c</fullName>
    <label>Reason for Back Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>XBorder</fullName>
            </value>
            <value>
                <fullName>Poor KPI in LRR</fullName>
            </value>
            <value>
                <fullName>Poor KPI in CSAT</fullName>
            </value>
            <value>
                <fullName>Wasn&apos;t speaking the language after being live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>