force-app/main/default/objects/Targeted_Country__c/fields/Reason_to_stop_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_stop_Back_Care__c</fullName>
    <description>used in flow &quot;Merchant - Bulk TC management optimized&quot; for choice set &quot;Choice_Set_Reason_Stop_BC&quot;
multi picklist values cannot be used because values are too long (&gt;40 char)</description>
    <label>Reason to stop Back Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>The Quality isn’t what I expected</fullName>
            </value>
            <value>
                <fullName>I think agents refund and return too many orders</fullName>
            </value>
            <value>
                <fullName>I hired someone to handle customer requests in this country</fullName>
            </value>
            <value>
                <fullName>It’s too expensive</fullName>
            </value>
            <value>
                <fullName>I will use another provider to handle customer requests</fullName>
            </value>
            <value>
                <fullName>Back Care isn’t working well with other Back Market services</fullName>
            </value>
            <value>
                <fullName>I am not happy with the support provided by Back Market</fullName>
            </value>
            <value>
                <fullName>I signed for a translation service and I don’t want to outsource</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>