force-app/main/default/objects/Targeted_Country__c/fields/Recipient_email_sales__c.field-meta.xml
<CustomField>
    <fullName>Recipient_email_sales__c</fullName>
    <label>Recipient email sales</label>
    <type>Email</type>
</CustomField>