force-app/main/default/objects/Targeted_Country__c/fields/Status_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Status_Back_Care__c</fullName>
    <label>Status Back Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract sent</fullName>
            </value>
            <value>
                <fullName>Contract signed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>