force-app/main/default/objects/Targeted_Country__c/fields/TECH_Send_test__c.field-meta.xml
<CustomField>
    <fullName>TECH_Send_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Send test</label>
    <type>Checkbox</type>
</CustomField>