force-app/main/default/objects/Targeted_Country__c/fields/Tech_TC_NoTrigger__c.field-meta.xml
<CustomField>
    <fullName>Tech_TC_NoTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_TC_NoTrigger</label>
    <type>Checkbox</type>
</CustomField>