force-app/main/default/objects/Targeted_Country__c/fields/TECH_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>TECH_Yes_No__c</fullName>
    <description>Used in flow bulk targeted country to display checkbox existing value</description>
    <label>TECH_Yes_No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>