force-app/main/default/objects/Targeted_Country__c/recordTypes/E_U.recordType-meta.xml
<RecordType>
    <fullName>E_U</fullName>
    <active>true</active>
    <description>Targeted Country For U.E.</description>
    <label>E.U. TC</label>
</RecordType>