force-app/main/default/objects/Targeted_Country__c/recordTypes/U_S.recordType-meta.xml
<RecordType>
    <fullName>U_S</fullName>
    <active>true</active>
    <description>Targeted Country For U.S. only</description>
    <label>U.S. TC</label>
</RecordType>