force-app/main/default/objects/Targeted_Country__c/validationRules/Create_new_Targeted_country_Checks.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_new_Targeted_country_Checks</fullName>
    <active>true</active>
    <description>This rule checks the requirements for create a Targeted Country
29/07 - deletion &quot;If it&apos;s not Live, a Customer Champion is required if Targeted country is not Candidate&quot;</description>
    <errorConditionFormula>NOT ( $User.Id =  $Setup.UserID__c.API_BM_SF__c )
&amp;&amp; 
ISNEW() 
&amp;&amp; ISPICKVAL ( Online_Status__c , &quot;Live&quot;)
&amp;&amp;  Back_Care__c !=true
&amp;&amp; NOT($RecordType.DeveloperName=&quot;U_S&quot;)
&amp;&amp; $User.ByPassValidationRules__c !=true</errorConditionFormula>
    <errorMessage>You can&apos;t create Live Targeted Country.</errorMessage>
</ValidationRule>